move weixin config into .env file

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,16 @@
 <?php
 define("DEV_ENV", false);	//开发环境改成true
+
+define("SERVER_IP", "");    //服务器ip地址
+
+// 微信相关设置
+define("APPID" , "weixin appid");   //微信公众号appid
+define("APP_SECRET", "weixin app secret");  //微信公众号app secret
+define("TOKEN", "weixin token");    //公众号token
+define("MCHID", "wxpay mchid"); //微信支付商户号
+define("PayKey", "wxpay paykey");   //微信支付paykey
+define("REDIRECT_URI", 'project url');  //微信授权登陆后跳转地址
+define("SCOPE", "snsapi_userinfo"); //微信授权登陆模式
+define('WXPAY_SSLCERT_PATH', 'ssl cert path');  //微信支付证书地址
+define('WXPAY_SSLKEY_PATH', 'ssl key path');    //微信支付密钥地址
 ?>
