add sending weixin template msg when admin reply tips

--- a/zcbox/.env.example
+++ b/zcbox/.env.example
@@ -2,6 +2,7 @@
 define("DEV_ENV", false);	//开发环境改成true
 
 define("SERVER_IP", "");    //服务器ip地址
+define("HOME_PAGE", "http://www.xxxx.xxx");	// 首页
 
 // 微信相关设置
 define("APPID" , "weixin appid");   //微信公众号appid
@@ -13,4 +14,5 @@ define("REDIRECT_URI", 'project url');  //微信授权登陆后跳转地址
 define("SCOPE", "snsapi_userinfo"); //微信授权登陆模式
 define('WXPAY_SSLCERT_PATH', 'ssl cert path');  //微信支付证书地址
 define('WXPAY_SSLKEY_PATH', 'ssl key path');    //微信支付密钥地址
+define('WX_REPLY_TEMPLATE', "weixin template id");	//微信模板消息id
 ?>
